security/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: front-end
  labels:
    purpose: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: back-end
  labels:
    purpose: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: back-end-kj
  labels:
    purpose: production
