security/back-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: back-end
  name: back-end-nginx
spec:
  selector:
    matchLabels:
      app: back-end-nginx
  template:
    metadata:
      labels:
        app: back-end-nginx
        security-level: L2
    spec:
      containers:
      - name: back-end-nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: back-end
  name: back-end-nginx
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: back-end-nginx
