security/network-policy01.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: security-level-policy-l2
  namespace: back-end
spec:
  poSelector:
    matchLabels:
      security-level: L2
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: front-end
    - podSelector:
        matchLabels:
          access-privilege: all
